--- a/BienestarBovino/app/src/main/res/layout/menuprincipal.xml
+++ b/BienestarBovino/app/src/main/res/layout/menuprincipal.xml
@@ -24,7 +24,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <Button
-        android:id="@+id/buttonRegisterMenu"
+        android:id="@+id/buttonGuardarVacunacion"
         android:layout_width="414dp"
         android:layout_height="54dp"
         android:background="#146304"
