Pequeña corrección en botón
Se agrega el color al botón abrir de la la pantalla venta

--- a/BienestarBovino/app/src/main/res/layout/venta.xml
+++ b/BienestarBovino/app/src/main/res/layout/venta.xml
@@ -11,11 +11,15 @@
         android:id="@+id/buttonCalendarSale"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
+        android:background="#146304"
         android:text="Abrir"
         android:textAllCaps="false"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.801"
+        app:layout_constraintHorizontal_bias="0.876"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.747" />
