--- a/BienestarBovino/app/src/main/res/layout/addbovino.xml
+++ b/BienestarBovino/app/src/main/res/layout/addbovino.xml
@@ -80,10 +80,10 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.54" />
 
-    <TextView
+    <EditText
         android:id="@+id/textViewDateNewBovino"
-        android:layout_width="214dp"
-        android:layout_height="50dp"
+        android:layout_width="341dp"
+        android:layout_height="49dp"
         android:background="@drawable/rectangle_drawable"
         android:ems="10"
         android:hint="Seleccione la fecha"
@@ -95,25 +95,9 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.126"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.64" />
-
-    <Button
-        android:id="@+id/buttonOpenCalendarNewBovino"
-        android:layout_width="111dp"
-        android:layout_height="52dp"
-        android:text="Abrir"
-        android:textColor="#FFFFFF"
-        android:background="#146304"
-        android:textAllCaps="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.896"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.642" />
 
     <ImageView
         android:id="@+id/imageViewaddbovino"
