--- a/BienestarBovino/app/src/main/res/layout/vacunacion.xml
+++ b/BienestarBovino/app/src/main/res/layout/vacunacion.xml
@@ -6,13 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".VaccineActivity">
 
-    <TextView
+    <EditText
         android:id="@+id/textViewDateVacunacion"
-        android:layout_width="214dp"
+        android:layout_width="304dp"
         android:layout_height="50dp"
         android:background="@drawable/rectangle_drawable"
         android:ems="10"
-        android:hint="Seleccione la fecha"
+        android:hint="Ingrese la fecha"
         android:inputType="date"
         android:minHeight="48dp"
         android:textAlignment="center"
@@ -21,7 +21,7 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.208"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.399" />
@@ -59,23 +59,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
-
-    <Button
-        android:id="@+id/buttonOpenCalendarVacunacion"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:background="#146304"
-        android:text="Abrir "
-        android:textAllCaps="false"
-        android:textColor="#FFFFFF"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.839"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.399" />
 
     <Spinner
         android:id="@+id/spinnerBovinoVacunacion"
