Se agrega el menú de control reproductivo
Se agrega el menú de control reproductivo con las transiciones, y el inicio de las pantallas de estado reproductivo

--- a/BienestarBovino/app/src/main/res/layout/addbovino.xml
+++ b/BienestarBovino/app/src/main/res/layout/addbovino.xml
@@ -86,7 +86,7 @@
         android:layout_height="49dp"
         android:background="@drawable/rectangle_drawable"
         android:ems="10"
-        android:hint="Seleccione la fecha"
+        android:hint="Ingrese la fecha de nacimiento"
         android:inputType="date"
         android:minHeight="48dp"
         android:textAlignment="center"
