Primera version del estado reproductivo
Se sube la primera version de la pantalla del estado reproductivo, con funcionalidad en base de datos, queda pendiente agregar calendarios, cálculos de fechas y cambios de color

--- a/BienestarBovino/app/src/main/res/layout/info_bovino.xml
+++ b/BienestarBovino/app/src/main/res/layout/info_bovino.xml
@@ -7,7 +7,7 @@
     tools:context=".InfoBovinoActivity">
 
     <Button
-        android:id="@+id/btnInfoRegresar"
+        android:id="@+id/btnInfoBovinoRegresar"
         android:layout_width="417dp"
         android:layout_height="49dp"
         android:background="#146304"
